Created the home page and gave some styling

--- a/index.html
+++ b/index.html
@@ -2,13 +2,18 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Delani Studio</title>
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
     <div class="container">
-
+      <div class="home">
+        <img src="images/logo/logo.png" alt="logo" id="logo">
+        <h1>WELCOME</h1>
+        <h1>TO DELANI STUDIO</h1>
+        <p>AMAZING PEOPLE ARE MAKING AMAZING DESIGNS IN AMAZING ENVIRONMENT</p>
+      </div>
     </div>
   </body>
 </html>
