--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
         <h1>WELCOME</h1>
         <h1>TO DELANI STUDIO</h1>
         <p>AMAZING PEOPLE ARE MAKING AMAZING DESIGNS IN AMAZING ENVIRONMENT</p>
+        <div class="mouse">
+          <a href="#about-us"><img src="images/mouse_click.png" alt=" mouse_click" id="mouse"></a>
+        </div>
+        
       </div>
     </div>
   </body>
