--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
           <p>based on your requirements, we can provide a complete offering or just the piece you need. </p>
         </div>
       </div>
+      <div class="what-we-do">
+
+      </div>
     </div>
   </body>
 </html>
