--- a/index.html
+++ b/index.html
@@ -33,6 +33,18 @@
         </div>
       </div>
       <div class="what-we-do">
+        <h2>WHAT WE DO</h2>
+        <div class="row">
+          <div class="col-md-4">
+
+          </div>
+          <div class="col-md-4">
+
+          </div>
+          <div class="col-md-4">
+            
+          </div>
+        </div>
 
       </div>
     </div>
