--- a/index.html
+++ b/index.html
@@ -36,13 +36,18 @@
         <h2>WHAT WE DO</h2>
         <div class="row">
           <div class="col-md-4">
+            <div class="design">
 
+            </div>
+            <div class="design-icon">
+
+            </div>
           </div>
           <div class="col-md-4">
 
           </div>
           <div class="col-md-4">
-            
+
           </div>
         </div>
 
