Added a span element to the WHAT WE DO heading and gave it a text-align position to center

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </div>
       </div>
       <div class="what-we-do">
-        <h2>WHAT WE DO</h2>
+        <span id="wedo"><h2>WHAT WE DO</h2></span>
         <div class="row">
           <div class="col-md-4">
             <div class="design">
