--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
         <div class="row">
           <div class="col-md-4">
             <div class="design">
-
+              <span id="design"><h2>DESIGN</h2></span>
+              <p>Our design practice offers a full range of services including brand strategy, interaction and visual design and user experience testing.</p>
+              <p>Throughout your project, our designers create and implement visual design and workflows, solicit user feedback and work with you to make sure what gets built is what is needed.</p>
             </div>
             <div class="design-icon">
 
