--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
               <p>Throughout your project, our designers create and implement visual design and workflows, solicit user feedback and work with you to make sure what gets built is what is needed.</p>
             </div>
             <div class="design-icon">
-
+              <img src="images/what-we-do/design_icon.png" alt="design">
+              <h4>DESIGN</h4>
             </div>
           </div>
           <div class="col-md-4">
