--- a/index.html
+++ b/index.html
@@ -36,18 +36,23 @@
         <span id="wedo"><h2>WHAT WE DO</h2></span>
         <div class="row">
           <div class="col-md-4">
-            <div class="design">
+            <div class="descripion">
               <h2>DESIGN</h2>
               <p>Our design practice offers a full range of services including brand strategy, interaction and visual design and user experience testing.</p>
               <p>Throughout your project, our designers create and implement visual design and workflows, solicit user feedback and work with you to make sure what gets built is what is needed.</p>
             </div>
-            <div class="design-icon">
+            <div class="icon">
               <img src="images/what-we-do/design_icon.png" alt="design">
               <h4>DESIGN</h4>
             </div>
           </div>
           <div class="col-md-4">
+            <div class="descripion">
 
+            </div>
+            <div class="icon">
+
+            </div>
           </div>
           <div class="col-md-4">
 
