--- a/index.html
+++ b/index.html
@@ -48,7 +48,9 @@
           </div>
           <div class="col-md-4">
             <div class="descripion">
-
+              <h2>DEVELOPMENT</h2>
+              <p>All engineers are fluent in the latest enterprise, mobile and web development technologies.</p>
+              <p>They collaborate with your team to write, and improve code on a daily basis, using proven practices such as test-driven development and pair programming.</p>
             </div>
             <div class="icon">
 
