Added an icon to the development row

--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
               <p>They collaborate with your team to write, and improve code on a daily basis, using proven practices such as test-driven development and pair programming.</p>
             </div>
             <div class="icon">
-
+              <img src="images/what-we-do/dev_icon.png" alt="development">
+              <h4>DEVELOPMENT</h4>
             </div>
           </div>
           <div class="col-md-4">
