--- a/index.html
+++ b/index.html
@@ -58,7 +58,12 @@
             </div>
           </div>
           <div class="col-md-4">
+            <div class="descripion">
+              
+            </div>
+            <div class="icon">
 
+            </div>
           </div>
         </div>
 
