Added an image to the product management row

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
               <p>They collaborate with your team to write, and improve code on a daily basis, using proven practices such as test-driven development and pair programming.</p>
             </div>
             <div class="icon">
-
+              <img src="images/what-we-do/product_icon.png" alt="product-management">
             </div>
           </div>
         </div>
