--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             </div>
           </div>
         </div>
-
+        <!-- <p>PROJECT IN PROGRESS</p> -->
       </div>
     </div>
   </body>
