Added a div for the portfolio section and gave an heading

--- a/index.html
+++ b/index.html
@@ -69,8 +69,12 @@
             </div>
           </div>
         </div>
-        <!-- <p>PROJECT IN PROGRESS</p> -->
       </div>
+
+      <div class="portfolio">
+        <span id="portfolio"><h2>PORTFOLIO</h2></span>
+      </div>
+
     </div>
   </body>
 </html>
