--- a/index.html
+++ b/index.html
@@ -74,7 +74,20 @@
       <div class="portfolio">
         <span id="portfolio"><h2>PORTFOLIO</h2></span>
       </div>
+      <div class="row">
+        <div class="col-md-3">
 
+        </div>
+        <div class="col-md-3">
+
+        </div>
+        <div class="col-md-3">
+
+        </div>
+        <div class="col-md-3">
+
+        </div>
+      </div>
     </div>
   </body>
 </html>
