Added 4 images to the portfolio first row

--- a/index.html
+++ b/index.html
@@ -72,20 +72,20 @@
       </div>
 
       <div class="portfolio">
-        <span id="portfolio"><h2>PORTFOLIO</h2></span>
+        <span id="portfolio-header"><h2>PORTFOLIO</h2></span>
       </div>
-      <div class="row">
+      <div class="row" id="portfolio">
         <div class="col-md-3">
-
+          <img src="images/portfolio/black_studio.jpg" alt="black_studio">
         </div>
         <div class="col-md-3">
-
+          <img src="images/portfolio/ontario_security.jpg" alt="ontario_security">
         </div>
         <div class="col-md-3">
-
+          <img src="images/portfolio/pyramids.jpg" alt="black_studio">
         </div>
         <div class="col-md-3">
-
+          <img src="images/portfolio/jim_carry.jpg" alt="black_studio">
         </div>
       </div>
     </div>
