Added images to the portfolio second row

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
           <p>based on your requirements, we can provide a complete offering or just the piece you need. </p>
         </div>
       </div>
+
       <div class="what-we-do">
         <span id="wedo"><h2>WHAT WE DO</h2></span>
         <div class="row">
@@ -73,21 +74,43 @@
 
       <div class="portfolio">
         <span id="portfolio-header"><h2>PORTFOLIO</h2></span>
-      </div>
       <div class="row" id="portfolio">
         <div class="col-md-3">
           <img src="images/portfolio/black_studio.jpg" alt="black_studio">
+          <p>Black Studio</p>
         </div>
         <div class="col-md-3">
           <img src="images/portfolio/ontario_security.jpg" alt="ontario_security">
+          <p>Ontario Security</p>
         </div>
         <div class="col-md-3">
           <img src="images/portfolio/pyramids.jpg" alt="black_studio">
+          <p>Pyramids</p>
         </div>
         <div class="col-md-3">
           <img src="images/portfolio/jim_carry.jpg" alt="black_studio">
+          <p>Jim Carry</p>
         </div>
       </div>
+      <div class="row" id="portfolio">
+        <div class="col-md-3">
+          <img src="images/portfolio/5.jpg" alt="black_studio">
+          <p>Have A Nice Day</p>
+        </div>
+        <div class="col-md-3">
+          <img src="images/portfolio/6.jpg" alt="ontario_security">
+          <p>Calculator</p>
+        </div>
+        <div class="col-md-3">
+          <img src="images/portfolio/7.jpg" alt="black_studio">
+          <p>Burned</p>
+        </div>
+        <div class="col-md-3">
+          <img src="images/portfolio/8.jpg" alt="black_studio">
+          <p>Giraffe Restaurant</p>
+        </div>
     </div>
-  </body>
+  </div>
+  </div>
+</body>
 </html>
