Added the contact section

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </div>
       </div>
       <div id="about_us">
-        <h2 id="about">ABOUT US</h2>
+        <h2>ABOUT US</h2>
         <p>When you work with us, you are part of a team of commited collaborators. All aspects of our software development process are intergrated , interactive and agile.</p>
         <p>Our approach unifies design, development and product managent to create exceptional products.</p>
         <p>We start each project by understanding your business goals, the users needs and the product requirements.</p>
@@ -34,7 +34,7 @@
       </div>
 
       <div class="what-we-do">
-        <span id="wedo"><h2>WHAT WE DO</h2></span>
+        <h2>WHAT WE DO</h2>
         <div class="row">
           <div class="col-md-4">
             <div class="descripion">
@@ -111,6 +111,38 @@
         </div>
     </div>
   </div>
+
+  <div class="contacts">
+      <div class="contact-overlay">
+          <h1 class="text-center text-white b-text">CONTACT US</h1><br>
+          <div class="col-md-12 input">
+              <form id="form">
+                  <div class="row">
+                      <div class="col-md-2 form"></div>
+                      <input class="col-md-4 form-control name" type="text" id="name" name="name" placeholder="Name..."
+                             required><br><br>
+                      <input class="col-md-4 form-control email" type="email" id="email" name="email" placeholder="Email..."
+                             required>
+                      <div class="col-md-2">
+                      </div>
+                  </div>
+                  <div class="row input">
+                      <div class="col-md-2"></div>
+                      <textarea class="form-control col-md-8 text" rows="12" name="message" id="message"
+                                placeholder="Your message here..."></textarea>
+                      <div class="col-md-2"></div>
+                  </div>
+                  <button class="btn btn-success mx-auto d-block submit" id="okButton" type="submit">Submit</button>
+                  <br>
+              </form>
+          </div>
+      </div>
+  </div>
+  <br><br>
+
+<!-- <p>project in progress</p> -->
+
   </div>
 </body>
+
 </html>
