Added contacts section and js files

--- a/index.html
+++ b/index.html
@@ -37,34 +37,34 @@
         <h2>WHAT WE DO</h2>
         <div class="row">
           <div class="col-md-4">
-            <div class="descripion">
+            <div class="descripion" id="design">
               <h3>DESIGN</h3>
               <p>Our design practice offers a full range of services including brand strategy, interaction and visual design and user experience testing.</p>
               <p>Throughout your project, our designers create and implement visual design and workflows, solicit user feedback and work with you to make sure what gets built is what is needed.</p>
             </div>
-            <div class="icon">
+            <div class="icon" id="design-image">
               <img src="images/what-we-do/design_icon.png" alt="design">
               <h5>DESIGN</h5>
             </div>
           </div>
           <div class="col-md-4">
-            <div class="descripion">
+            <div class="descripion" id="development">
               <h3>DEVELOPMENT</h3>
               <p>All engineers are fluent in the latest enterprise, mobile and web development technologies.</p>
               <p>They collaborate with your team to write, and improve code on a daily basis, using proven practices such as test-driven development and pair programming.</p>
             </div>
-            <div class="icon">
+            <div class="icon" id="development-image">
               <img src="images/what-we-do/dev_icon.png" alt="development">
               <h5>DEVELOPMENT</h5>
             </div>
           </div>
           <div class="col-md-4">
-            <div class="descripion">
+            <div class="descripion" id="product">
               <h3>PRODUCT MANAGEMENT</h3>
               <p>All engineers are fluent in the latest enterprise, mobile and web development technologies.</p>
               <p>They collaborate with your team to write, and improve code on a daily basis, using proven practices such as test-driven development and pair programming.</p>
             </div>
-            <div class="icon">
+            <div class="icon" id="product-image">
               <img src="images/what-we-do/product_icon.png" alt="product-management">
               <h5>PRODUCT MANAGEMENT</h5>
             </div>
@@ -75,39 +75,39 @@
       <div class="portfolio">
         <span id="portfolio-header"><h2>PORTFOLIO</h2></span>
       <div class="row" id="portfolio">
-        <div class="col-md-3">
+        <div class="col-md-3" id="work1">
           <img src="images/portfolio/black_studio.jpg" alt="black_studio">
-          <p>Black Studio</p>
+          <p id="one">Black Studio</p>
         </div>
-        <div class="col-md-3">
+        <div class="col-md-3" id="work2">
           <img src="images/portfolio/ontario_security.jpg" alt="ontario_security">
-          <p>Ontario Security</p>
+          <p id="two">Ontario Security</p>
         </div>
-        <div class="col-md-3">
+        <div class="col-md-3" id="work3">
           <img src="images/portfolio/pyramids.jpg" alt="black_studio">
-          <p>Pyramids</p>
+          <p id="three">Pyramids</p>
         </div>
-        <div class="col-md-3">
+        <div class="col-md-3" id="work4">
           <img src="images/portfolio/jim_carry.jpg" alt="black_studio">
-          <p>Jim Carry</p>
+          <p id="four">Jim Carry</p>
         </div>
       </div>
       <div class="row" id="portfolio">
-        <div class="col-md-3">
+        <div class="col-md-3" id="work5">
           <img src="images/portfolio/5.jpg" alt="black_studio">
-          <p>Have A Nice Day</p>
+          <p id="five">Have A Nice Day</p>
         </div>
-        <div class="col-md-3">
+        <div class="col-md-3" id="work6">
           <img src="images/portfolio/6.jpg" alt="ontario_security">
-          <p>Calculator</p>
+          <p id="six">Calculator</p>
         </div>
-        <div class="col-md-3">
+        <div class="col-md-3" id="work7">
           <img src="images/portfolio/7.jpg" alt="black_studio">
-          <p>Burned</p>
+          <p id="seven">Burned</p>
         </div>
-        <div class="col-md-3">
+        <div class="col-md-3" id="work8">
           <img src="images/portfolio/8.jpg" alt="black_studio">
-          <p>Giraffe Restaurant</p>
+          <p id="eight">Giraffe Restaurant</p>
         </div>
     </div>
   </div>
@@ -143,6 +143,7 @@
 <!-- <p>project in progress</p> -->
 
   </div>
+    <script src="js/jquery-3.4.1.js"></script>
+    <script src="js/script.js"></script>
 </body>
-
 </html>
