--- a/index.html
+++ b/index.html
@@ -113,34 +113,43 @@
   </div>
 
   <div class="contacts">
-      <div class="contact-overlay">
-          <h1 class="text-center text-white b-text">CONTACT US</h1><br>
-          <div class="col-md-12 input">
-              <form id="form">
-                  <div class="row">
-                      <div class="col-md-2 form"></div>
-                      <input class="col-md-4 form-control name" type="text" id="name" name="name" placeholder="Name..."
-                             required><br><br>
-                      <input class="col-md-4 form-control email" type="email" id="email" name="email" placeholder="Email..."
-                             required>
-                      <div class="col-md-2">
-                      </div>
-                  </div>
-                  <div class="row input">
-                      <div class="col-md-2"></div>
-                      <textarea class="form-control col-md-8 text" rows="12" name="message" id="message"
-                                placeholder="Your message here..."></textarea>
-                      <div class="col-md-2"></div>
-                  </div>
-                  <button class="btn btn-success mx-auto d-block submit" id="okButton" type="submit">Submit</button>
-                  <br>
-              </form>
+    <div class="contact-overlay">
+      <h1 class="text-center text-white b-text">CONTACT US</h1><br>
+      <div class="col-md-12 input">
+        <form id="form">
+          <div class="row">
+            <div class="col-md-2 form"></div>
+             <input class="col-md-4 form-control name" type="text" id="name" name="name" placeholder="Name..."
+             required><br><br>
+             <input class="col-md-4 form-control email" type="email" id="email" name="email" placeholder="Email..."required>
+           <div class="col-md-2"></div>
+          </div>
+          <div class="row input">
+           <div class="col-md-2"></div>
+           <textarea class="form-control col-md-8 text" rows="12" name="message" id="message" placeholder="Your message here..."></textarea>
+           <div class="col-md-2"></div>
+         </div>
+          <button class="btn btn-success mx-auto d-block submit" id="okButton" type="submit">Submit</button><br>
+      </form>
           </div>
       </div>
   </div>
   <br><br>
 
-<!-- <p>project in progress</p> -->
+<div class="social mx-auto text-center">
+ <div class="col-md-2"></div>
+<img src="images/social_icons/twitter.png">
+<img src="images/social_icons/dribble.png">
+<img src="images/social_icons/facebook.png">
+   <img src="images/social_icons/g_plus.png">
+   <img src="images/social_icons/skype.png">
+   <img src="images/social_icons/stumble_upon.png">
+   <img src="images/social_icons/behance.png">
+   <img src="images/social_icons/pinterest.png">
+   <img src="images/social_icons/flickr.png">
+    </div>
+    <br>
+    <footer class="text-center">Delani Studio <br> 2019</footer>
 
   </div>
     <script src="js/jquery-3.4.1.js"></script>
