--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title>Delani Studio</title>
+    <link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
+    <style type="text/css">
+    	#mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
+    </style>
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/styles.css">
   </head>
@@ -45,7 +49,8 @@
             <div class="icon" id="design-image">
               <img src="images/what-we-do/design_icon.png" alt="design">
               <h5>DESIGN</h5>
-            </div>
+            </div
+            >
           </div>
           <div class="col-md-4">
             <div class="descripion" id="development">
@@ -131,28 +136,26 @@
          </div>
           <button class="btn btn-success mx-auto d-block submit" id="okButton" type="submit">Submit</button><br>
       </form>
-          </div>
-      </div>
+    </div>
   </div>
+</div>
   <br><br>
 
-<div class="social mx-auto text-center">
- <div class="col-md-2"></div>
-<img src="images/social_icons/twitter.png">
-<img src="images/social_icons/dribble.png">
-<img src="images/social_icons/facebook.png">
-   <img src="images/social_icons/g_plus.png">
-   <img src="images/social_icons/skype.png">
-   <img src="images/social_icons/stumble_upon.png">
-   <img src="images/social_icons/behance.png">
-   <img src="images/social_icons/pinterest.png">
-   <img src="images/social_icons/flickr.png">
-    </div>
-    <br>
+  <div class="social mx-auto text-center">
+    <div class="col-md-2"></div>
+    <img src="images/social_icons/twitter.png">
+    <img src="images/social_icons/dribble.png">
+    <img src="images/social_icons/facebook.png">
+    <img src="images/social_icons/g_plus.png">
+    <img src="images/social_icons/skype.png">
+    <img src="images/social_icons/stumble_upon.png">
+    <img src="images/social_icons/behance.png">
+    <img src="images/social_icons/pinterest.png">
+    <img src="images/social_icons/flickr.png">
+  </div><br>
     <footer class="text-center">Delani Studio <br> 2020</footer>
-
-  </div>
-    <script src="js/jquery-3.4.1.js"></script>
-    <script src="js/script.js"></script>
+ </div>
+  <script src="js/jquery-3.4.1.js"></script>
+  <script src="js/script.js"></script>
 </body>
 </html>
